--- a/css/ui.multiselect.css
+++ b/css/ui.multiselect.css
@@ -1,30 +1,30 @@
 /* Multiselect
 ----------------------------------*/
 
-.ui-multiselect { border: solid 1px; font-size: 0.8em; }
-.ui-multiselect ul { -moz-user-select: none; }
-.ui-multiselect li { margin: 0; padding: 0; cursor: default; line-height: 20px; height: 20px; font-size: 11px; list-style: none; }
-.ui-multiselect li a { color: #999; text-decoration: none; padding: 0; display: block; float: left; cursor: pointer;}
-.ui-multiselect li.ui-draggable-dragging { padding-left: 10px; }
+ .multiselect-wrapper .ui-multiselect { border: solid 1px; font-size: 0.8em; width: 304px !important; }
+ .multiselect-wrapper .ui-multiselect ul { -moz-user-select: none; }
+ .multiselect-wrapper .ui-multiselect li { margin: 0; padding: 0; cursor: default; line-height: 20px; height: 20px; font-size: 11px; list-style: none; }
+ .multiselect-wrapper .ui-multiselect li a { color: #999; text-decoration: none; padding: 0; display: block; float: left; cursor: pointer;}
+ .multiselect-wrapper .ui-multiselect li.ui-draggable-dragging { padding-left: 10px; }
 
-.ui-multiselect div.selected { position: relative; padding: 0; margin: 0; border: 0; float:left; }
-.ui-multiselect ul.selected { position: relative; padding: 0; overflow: auto; overflow-x: hidden; background: #fff; margin: 0; list-style: none; border: 0; position: relative; width: 100%; }
-.ui-multiselect ul.selected li { }
+ .multiselect-wrapper .ui-multiselect div.selected { position: relative; padding: 0; margin: 0; border: 0; float:left; }
+ .multiselect-wrapper .ui-multiselect ul.selected { position: relative; padding: 0; overflow: auto; overflow-x: hidden; background: #fff; margin: 0; float: left; list-style: none; border: 0; position: relative; width: 150px !important; }
+ .multiselect-wrapper .ui-multiselect ul.selected li { }
 
-.ui-multiselect div.available { position: relative; padding: 0; margin: 0; border: 0; float:left; border-left: 1px solid; }
-.ui-multiselect ul.available { position: relative; padding: 0; overflow: auto; overflow-x: hidden; background: #fff; margin: 0; list-style: none; border: 0; width: 100%; }
-.ui-multiselect ul.available li { padding-left: 10px; }
- 
-.ui-multiselect .ui-state-default { border: none; margin-bottom: 1px; position: relative; padding-left: 20px;}
-.ui-multiselect .ui-state-hover { border: none; }
-.ui-multiselect .ui-widget-header {border: none; font-size: 11px; margin-bottom: 1px;}
- 
-.ui-multiselect .add-all { float: right; padding: 7px;}
-.ui-multiselect .remove-all { float: right; padding: 7px;}
-.ui-multiselect .search { float: left; padding: 4px;}
-.ui-multiselect .count { float: left; padding: 7px;}
+ .multiselect-wrapper .ui-multiselect div.available { position: relative; padding: 0; margin: 0; border: 0; float:left; border-left: 1px solid; }
+ .multiselect-wrapper .ui-multiselect ul.available { position: relative; padding: 0; overflow: auto; overflow-x: hidden; background: #fff; margin: 0; float: right; list-style: none; border: 0; width: 150px !important; }
+ .multiselect-wrapper .ui-multiselect ul.available li { padding-left: 10px; padding-right: 20px; }
 
-.ui-multiselect li span.ui-icon-arrowthick-2-n-s { position: absolute; left: 2px; }
-.ui-multiselect li a.action { position: absolute; right: 2px; top: 2px; }
- 
-.ui-multiselect input.search { height: 14px; padding: 1px; opacity: 0.5; margin: 4px; width: 100px; }
+ .multiselect-wrapper .ui-multiselect .ui-state-default { border: none; margin-bottom: 1px; position: relative; padding-left: 20px;}
+ .multiselect-wrapper .ui-multiselect .ui-state-hover { border: none; }
+ .multiselect-wrapper .ui-multiselect .ui-widget-header {border: none; font-size: 11px; margin-bottom: 1px;}
+
+ .multiselect-wrapper .ui-multiselect .add-all { float: right; padding: 7px;}
+ .multiselect-wrapper .ui-multiselect .remove-all { float: right; padding: 7px;}
+ .multiselect-wrapper .ui-multiselect .search { float: left; padding: 4px;}
+ .multiselect-wrapper .ui-multiselect .count { float: left; padding: 7px;}
+
+ .multiselect-wrapper .ui-multiselect li span.ui-icon-arrowthick-2-n-s { position: absolute; left: 2px; }
+ .multiselect-wrapper .ui-multiselect li a.action { position: absolute; right: 2px; top: 2px; }
+
+ .multiselect-wrapper .ui-multiselect input.search { height: 14px; padding: 1px; opacity: 0.5; margin: 4px; width: 100px; }
